chore: update index.html with SEO meta tags, add canonical link, and theme color; add @radix-ui/react-accordion and embla-carousel-react dependencies in package.json and package-lock.json

--- a/index.html
+++ b/index.html
@@ -4,7 +4,33 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Flexify | Full Stack & AI Solutions by Saeed Al-Tout</title>
+    <meta name="title" content="Flexify | Full Stack & AI Solutions by Saeed Al-Tout" />
+    <meta name="description" content="Flexify: Building innovative web and AI solutions. Explore Saeed Al-Tout's portfolio, projects, and expertise in React, Next.js, Node.js, and modern AI technologies." />
+    <meta name="keywords" content="Flexify, Saeed Al-Tout, Full Stack Developer, AI Developer, React, Next.js, Node.js, Portfolio, Web Development, Machine Learning, Deep Learning, RAG, Prompt Engineering" />
+    <meta name="author" content="Saeed Al-Tout" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://flexify.dev/" />
+    <meta property="og:title" content="Flexify | Full Stack & AI Solutions by Saeed Al-Tout" />
+    <meta property="og:description" content="Flexify: Building innovative web and AI solutions. Explore Saeed Al-Tout's portfolio, projects, and expertise in React, Next.js, Node.js, and modern AI technologies." />
+    <meta property="og:image" content="https://flexify.dev/og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://flexify.dev/" />
+    <meta property="twitter:title" content="Flexify | Full Stack & AI Solutions by Saeed Al-Tout" />
+    <meta property="twitter:description" content="Flexify: Building innovative web and AI solutions. Explore Saeed Al-Tout's portfolio, projects, and expertise in React, Next.js, Node.js, and modern AI technologies." />
+    <meta property="twitter:image" content="https://flexify.dev/og-image.png" />
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://flexify.dev/" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#18181b" />
   </head>
   <body>
     <div id="root"></div>
